New functionality for unused content selectors